@@ -663,6 +663,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11039. ByteBufferReadable API doc is inconsistent with the
     implementations. (Yi Liu via Colin P. McCabe)
 
+    HADOOP-11446. S3AOutputStream should use shared thread pool to
+    avoid OutOfMemoryError. (Ted Yu via stevel)	
+    
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
